AV: don't hide editor behind the marble; use standard font for suggestions (avoid strange letters with diacritic), localize tooltips
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55896 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -164,6 +164,7 @@ $duration: 0.2s;
 
 	.suggestionBar {
 		position: absolute;
+		font-family: sans-serif;
 		bottom:0px;
 		right:0;
 		overflow-y:hidden;
@@ -348,6 +349,7 @@ $duration: 0.2s;
 		.scrollableTextBox.avPreview,
 		.scrollableTextBox.noPreview, 
 		.avItem .elemText,
+		.avItem .elemText.scrollableTextBox,
 		.avItemContent {
 			padding-top: 10px;
 			padding-left: 68px;
